# opentx

./: .gitignore  .gitpod.yml  CMakeLists.txt  Dockerfile  README.md  sonar-project.properties
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug.md
companion/src/firmwares/: customfunctiondata.cpp  modeldata.cpp  sensordata.h
companion/src/modeledit/: customfunctions.cpp
radio/src/: CMakeLists.txt  audio.cpp  audio.h  audio_arm.cpp  audio_arm.h  audio_avr.cpp  audio_avr.h  bluetooth.cpp  buzzer.cpp  buzzer.h  cli.cpp  dataconstants.h  datastructs.h  debug.h  dmafifo.h  dump.cpp  fifo.h  functions.cpp  gvars.cpp  keys.cpp  keys.h  logs.cpp  main.cpp  main_arm.cpp  mixer.cpp  mixer_scheduler.cpp  mixer_scheduler.h  myeeprom.h  opentx.cpp  opentx.h  rtos.h  sbus.cpp  sdcard.cpp  sdcard.h  serial.cpp  simu.cpp  stamp.cpp  stamp.h.in  strhelpers.cpp  strhelpers.h  (+11 more)
radio/src/gui/: CMakeLists.txt  gui_common.cpp  gui_common.h  gui_common_arm.cpp  screenshot.cpp
radio/src/gui/128x64/: bmp.cpp  fonts.cpp  gui.h  lcd.cpp  lcd.h  menu_model.cpp  menu_radio.cpp  menus.cpp  menus.h  model_curve_edit.cpp  model_custom_scripts.cpp  model_display.cpp  model_flightmodes.cpp  model_gvars.cpp  model_input_edit.cpp  model_inputs_mixes.cpp  model_logical_switches.cpp  model_mix_edit.cpp  model_outputs.cpp  model_outputs_arm.cpp  model_select.cpp  model_setup.cpp  model_special_functions.cpp  model_telemetry.cpp  model_templates.cpp  navigation.cpp  popups.cpp  popups.h  radio_calibration.cpp  radio_diaganas.cpp  radio_diagkeys.cpp  radio_hardware.cpp  radio_setup.cpp  radio_version.cpp  splash.cpp  view_about.cpp  view_channels.cpp  view_main.cpp  view_statistics.cpp  view_telemetry.cpp  (+1 more)
radio/src/gui/212x64/: bmp.cpp  gui.h  lcd.cpp  lcd.h  menu_model.cpp  model_curve_edit.cpp  model_display.cpp  model_flightmodes.cpp  model_gvars.cpp  model_input_edit.cpp  model_logical_switches.cpp  model_mix_edit.cpp  model_select.cpp  model_setup.cpp  model_special_functions.cpp  model_telemetry.cpp  popups.cpp  popups.h  radio_calibration.cpp  radio_diaganas.cpp  radio_diagkeys.cpp  radio_hardware.cpp  radio_setup.cpp  view_about.cpp  view_channels.cpp  view_main.cpp  view_statistics.cpp  view_telemetry.cpp  widgets.cpp
radio/src/gui/480x272/: bitmapbuffer.cpp  lcd.cpp  menu_model.cpp  menus.cpp  menus.h  model_curves.cpp  model_flightmodes.cpp  model_inputs.cpp  model_logical_switches.cpp  model_mixes.cpp  model_setup.cpp  model_special_functions.cpp  model_telemetry.cpp  popups.cpp  radio_calibration.cpp  radio_hardware.cpp  radio_sdmanager.cpp  radio_setup.cpp  radio_trainer.cpp  view_channels.cpp  view_logical_switches.cpp  view_main.cpp  view_statistics.cpp  widgets_container.h
radio/src/gui/480x272/widgets/: gauge.cpp
radio/src/gui/common/arm/: widgets.cpp
radio/src/gui/common/colorlcd/: model_heli.cpp  widgets.cpp
radio/src/gui/common/stdlcd/: CMakeLists.txt  model_curves.cpp  model_heli.cpp  model_inputs.cpp  model_mixes.cpp  popups.cpp  radio_sdmanager.cpp  radio_tools.cpp  radio_trainer.cpp  view_text.cpp  widgets.cpp
radio/src/gui/navigation/: navigation_9x.cpp  navigation_x7.cpp  navigation_xlite.cpp
radio/src/io/: bootloader_flash.cpp  frsky_sport.cpp
radio/src/lua/: api_general.cpp  interface.cpp
radio/src/pulses/: crossfire.cpp  dsm2_arm.cpp  modules.h  multi_arm.cpp  ppm.cpp  ppm_arm.cpp  pulses.cpp  pulses.h  pulses_arm.cpp  pulses_arm.h  pulses_common.h  pxx.cpp  pxx.h  pxx2.cpp  sbus_arm.cpp
radio/src/storage/: eeprom_common.cpp  eeprom_conversions.cpp  eeprom_raw.cpp  eeprom_rlc.cpp  eeprom_rlc.h  modelslist.cpp  sdcard_raw.cpp  storage.h  storage_common.cpp
radio/src/targets/common/arm/: CMakeLists.txt
radio/src/targets/common/arm/stm32/: CMakeLists.txt  adc_driver.cpp  analog_adc_driver.cpp  (+21 more)
radio/src/targets/flysky/: A7105_SPI.cpp  AFHDS.cpp  AFHDS2A.cpp  AFHDS2A_a7105.cpp  CMakeLists.txt  STM32F072VB_FLASH.ld  adc_driver.cpp  aux_serial_driver.cpp  backlight_driver.cpp  board.cpp  board.h  buzzer_driver.cpp  buzzer_driver.h  crc_driver.cpp  crc_driver.h  dfplayer_driver.cpp  dfplayer_driver.h  diskio.cpp  dmastream.h  eeprom_driver.cpp  extmodule_driver.cpp  hal.h  i2c_common_v2.cpp  i2c_common_v2.h  i2c_driver.cpp  i2c_driver.cpp_  i2c_driver.cpp_2  i2c_driver.h  iface_a7105.h  intmodule_pulses_driver.cpp  keys_driver.cpp  lcd_driver.cpp  led_driver.cpp  pulses_driver.cpp  pwr_driver.cpp  serial2_driver.cpp  startup_stm32f072.s  stm32_ramboot.ld  telemetry_driver.cpp  trainer_driver.cpp
radio/src/targets/flysky/bootloader/: boot_menu.cpp
radio/src/targets/flysky/tools/: elrs.cpp  elrsV2.cpp  elrsV3.cpp  hello.cpp  inav.cpp  tiny_string.cpp
radio/src/targets/horus/: CMakeLists.txt  adc_driver.cpp  board.cpp  board.h  extmodule_driver.cpp  hal.h  keys_driver.cpp  pwr_driver.cpp  telemetry_driver.cpp
radio/src/targets/horus/bootloader/: boot_menu.cpp
radio/src/targets/simu/: opentxsimulator.cpp  simpgmspace.cpp  simpgmspace.h  simufatfs.cpp
radio/src/targets/sky9x/: board.cpp  board.h  lcd_driver.cpp
radio/src/targets/taranis/: CMakeLists.txt  backlight_driver.cpp  board.cpp  board.h  extmodule_driver.cpp  hal.h  intmodule_pulses_driver.cpp  keys_driver.cpp  pwr_driver.cpp  telemetry_driver.cpp  trainer_driver.cpp
radio/src/targets/taranis/bootloader/: boot_menu.cpp
radio/src/telemetry/: crossfire.cpp  crossfire.h  expresslrs.cpp  expresslrs.h  flysky_ibus.cpp  flysky_ibus.h  frsky.cpp  frsky.h  frsky_d_arm.cpp  frsky_sport.cpp  spektrum.cpp  telemetry.cpp  telemetry.h  telemetry_holders.h  telemetry_sensors.cpp  telemetry_sensors.h
radio/src/tests/: CMakeLists.txt  frsky.cpp  gtests.h  mixer.cpp
radio/src/translations/: cz.h.txt  de.h.txt  en.h.txt  es.h.txt  fi.h.txt  fr.h.txt  it.h.txt  nl.h.txt  pl.h.txt  pt.h.txt  se.h.txt  tts_cz.cpp  tts_de.cpp  tts_en.cpp  tts_es.cpp  tts_fr.cpp  tts_hu.cpp  tts_it.cpp  tts_nl.cpp  tts_pl.cpp  tts_pt.cpp  tts_ru.cpp  tts_se.cpp  tts_sk.cpp
radio/util/: bmp2frames.py  fwoptions.py
tools/: build-flysky.py  commit-tests.sh  get-fw-size.sh
(+5 files in other folders)
